deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes1-deployment
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: kubernetes1
    spec:
      containers:
      - name: kubernetes1
        image: sjd300671/kubernetes1
        ports:
        - containerPort: 8080
