service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes1-deployment
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kubernetes1
    type: NodePort
