ingress.complex.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes1-service-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes1-service
          servicePort: 8080
